--- a/acl_openstack_authorization/appsettings.json
+++ b/acl_openstack_authorization/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
   "certificates": {
-    "certificate_pass": "KQ3jutsTAztA5oCCundh"
+    "certificate_pass": "Certificate_pass"
   },
   "Jwt": {
-    "Key": "nG7a84zL1KvM4Zc9R3u9N2l9wT7a4E5d",
-    "Issuer": "https://auth.local",
-    "Audience": "https://api.local"
+    "Key": "JWT_secret_key",
+    "Issuer": "Issuer",
+    "Audience": "Audience"
   }
 }
