--- a/acl_openstack_identity/acl_openstack_identity.csproj
+++ b/acl_openstack_identity/acl_openstack_identity.csproj
@@ -32,7 +32,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Conns\" />
+    <Folder Include="Data\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
