--- a/acl_openstack_identity/appsettings.json
+++ b/acl_openstack_identity/appsettings.json
@@ -7,17 +7,21 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AssecoOpenstackDatabase": "Host=213.222.222.102;Database=acl_openstack;Username=postgres;Password=b6T22sfQyMkUdHSSuktr;"
+    "AssecoOpenstackDatabase": "Host=DBHOST;Database=DBDatabase;Username=DBUSERNAME;Password=DBPASSWORD"
   },
   "OpenStack": {
-    "AuthUrl": "https://os-c01-public.szc.poc.cpd.asseco.cloud:5000",
-    "Username": "FDTestApiAdmin",
-    "Password": "wBNxa4zJaMe36t7UTQ5u",
-    "Project": "FDTestApi",
-    "Region": "SZC",
-    "Domain": "default"
+    "AuthUrl": "OPENSTACK IDENTITY ENDPOINT URL",
+    "Username": "ADMIN USERNAME",
+    "Password": "ADMIN PASSWORD",
+    "Project": "ADMIN PROJECT",
+    "Region": "REGION",
+    "Domain": "OPENSTACK DOMAIN"
   },
   "AuthenticationService": {
-    "BaseUrl": "https://auth.local:49371"
+    "BaseUrl": "FD_OPENSTACK_PANEL JWT AUTHENTICATION ENDPOINT SERVICE"
+  },
+  "KeyCloak": {
+    "Username": "KEYCLOAK ADMIN USERNAME",
+    "Password": "KEYCLOAK ADMIN PASSWORD"
   }
 }
